# prun

./: .gitignore  .uv  README.md  pyproject.toml  schema.sql  shipping_system_plan.md
.copilot/: coding-guidelines.md
.cursor/: mcp.json
.cursor/rules/: code-organization.mdc  frontend-setup.mdc  no-typing-imports.mdc  pydantic-v2.mdc  server-management.mdc
.github/copilot/: code-organization.mdc  coding-guidelines.md  frontend-setup.mdc  no-typing-imports.mdc  pydantic-v2.mdc  server-management.mdc
examples/: HOW to USE  generate_empire_py and normalize_production_yaml_py.txt  afc_production_chain.yaml  buy_list_example.yaml  dnpc_chain.yaml  dnpc_production_chain.yaml  generate_empire.py  internal_offers.yaml  jester_production_chain.yaml  normalize_production_yaml.py  production_chain.yaml
fio/: __init__.py  client.py  interface.py  models.py
fio/tests/: test_client.py
fly/: cli.py  config.py  di.py  errors.py  interface.py  main.py  repository.py  util.py
fly/models/: db_models.py  fly_models.py
fly/services/: building_service.py  cost_service.py  efficiency_service.py  exchange_service.py  internal_offer_service.py  item_service.py  planet_service.py  recipe_service.py  site_service.py  storage_service.py  system_service.py  warehouse_service.py  workforce_service.py
fly/simulations/: empire_simulation.py
prun/: __init__.py  cli.py  config.py  database.py  di.py  errors.py  interface.py  main.py  models.py  probability.py  repository.py
prun/.cursor/: rules
prun/models/: __init__.py  db_models.py  fly_models.py
prun/services/: building_service.py  cost_service.py  efficiency_service.py  exchange_service.py  expert_service.py  internal_offer_service.py  item_service.py  liquidity_service.py  localmarket_service.py  planet_service.py  recipe_service.py  site_service.py  storage_service.py  system_service.py  warehouse_service.py  workforce_service.py
prun/simulations/: empire_simulation.py
sql/: cogc_program_debug.sql  cogm_recipe_cost_debug.sql  food_h2o_search.sql  h2o.sql  h2o_planet_resource.sql  re_agriculture_search.sql  recipe_lookup.sql  system_jump_matrix.sql
tests/: fixtures.py  service_test.py
(+6 files in other folders)
